--- a/composer.json
+++ b/composer.json
@@ -87,6 +87,7 @@
         "drupal/simple_gmap": "^1.3",
         "drupal/stage_file_proxy": "^1.1",
         "drupal/swiftmailer": "1.x-dev",
+        "drupal/tagify": "^1.0",
         "drupal/taxonomy_menu": "^3",
         "drupal/taxonomy_term_depth": "2.x-dev",
         "drupal/token": "^1",
